# ai-image-pipeline

backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/routers/: images.py  websocket.py
backend/app/services/: ai_models.py  processor.py  websocket_manager.py
web/: package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/components/: app-sidebar.svelte
web/src/lib/components/image/: image-card.svelte  label-badge.svelte
web/src/lib/components/sidebar/: app-sidebar.svelte  sidebar-footer.svelte
web/src/lib/stores/: app.context.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte
